fix: add vertical-align top to fix wrong height (#1508)
* fix: add vertical-align top to fix wrong height

* fix: spin is not centered and align in the componeent autoComplete, tree, upload

--- a/packages/semi-foundation/tree/tree.scss
+++ b/packages/semi-foundation/tree/tree.scss
@@ -302,6 +302,7 @@ $module: #{$prefix}-tree;
 
         &-spin-icon {
             display: flex;
+            line-height: 0; // make the spin icon in the center
             & svg {
                 width: $width-tree_spinIcon;
                 height: $width-tree_spinIcon;
